log

Thu 17 Aug 2023 08:20:24 PM UTC: 
 tests:  0|7
total_score: 0/70
4834430
Thu 17 Aug 2023 08:24:38 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
011be2e
